Edit For retablish

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     />
 
-    <title>Mairie Anyama</title>
+    <title>Ma Mairie</title>
   </head>
   <body>
     <noscript> Votre Navigateur a desactivé la technologie Moderne (JAVASCRIPT). Veillez les Activer </noscript>
