--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <base href="%PUBLIC_URL%/">
     <meta charset="utf-8" />
     <meta
       name="viewport"
